# GEGL-GIMP-PLUGIN_Star_Background

./: README.md  starbackground.c
SourceCode/starbackground/: meson.build  starbackground.c
